--- a/src/index.css
+++ b/src/index.css
@@ -140,10 +140,100 @@ button.help-icon {
   box-shadow: unset;
 }
 
+.exercise-info {
+  margin: auto 0;
+}
+
+.skill-name {
+  text-transform: capitalize;
+}
+
+.modal-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  z-index: 100;
+  padding: 1rem;
+}
+
+.modal-underlay {
+  position: absolute;
+  inset: 0;
+  background: var(--background-muted);
+  opacity: 0.8;
+  z-index: 99;
+  width: 100%;
+  border-radius: 0;
+  box-shadow: unset;
+  border: none;
+}
+
+.modal-underlay:hover {
+  transform: unset;
+  box-shadow: unset;
+}
+
+.modal-content {
+  position: relative;
+  z-index: 101;
+  width: 100%;
+  margin: 0 auto;
+  max-width: 600px;
+  max-height: 400px;
+  border-radius: var(--border-radius-large);
+  border: 1px solid var(--border-primary);
+  background: var(--background-primary);
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
 footer {
   display: flex;
   align-items: center;
   justify-content: center;
   padding: 4rem 0 2rem 0;
   text-align: center;
+}
+
+@media (min-width: 640px) {
+  body {
+    gap: 2rem;
+    padding: 2rem 0;
+  }
+
+  .rule-item p:first-of-type {
+    min-width: 70px;
+  }
+
+  .training-plan-grid {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+    gap: 1rem;
+  }
+
+  .workout-container {
+    grid-column: span 4 / span 4;
+  }
+
+  .plan-card-header p:first-of-type,
+  .plan-card-header i {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+}
+
+@media (min-width: 768px) {
+  .training-plan-grid {
+    grid-template-columns: repeat(5, minmax(0, 1fr));
+  }
+  .workout-container {
+    grid-column: span 5 / span 5;
+  }
 }
